# checker

./: .earthignore  .gitignore  .gitmodules  .pre-commit-hook.sh  .readthedocs.yaml  Earthfile  George_TODOs  LiquidationAuctionTesting.ipynb  Makefile  README.md  build.sh  call-contract.sh  checker-fa2.yaml  checker-index-tez.yaml  checker-tez.yaml  checker-token-fa2.yaml  checker.ml  checker.opam  checker.py  checker.yaml  countthem.sh  debug_gas.py  debugging.py  default.nix  deploy-contract.sh  fix_ligo.py  generate-ligo.sh  glossary.md  pyproject.toml  run-sandbox.sh  script.py  shell.nix  test-coverage-report.json  test.py  treefmt.toml
.github/workflows/: ci.yml  ci.yml.bac  ci_nightly.yml  comment.yml  deploy-testnet.yml  doc.yml  mutate.yml
abandoned/python/: checker.py
bench/: README.md  entrypoint.mligo
checker_tools/: README.md
checker_tools/builder/: cli.py  config.py
checker_tools/builder/checker_builder/templates/: tokenGetOracleEntrypoint.ml.jinja  tokenMetadata.ml.jinja
checker_tools/builder/templates/: bangBangDriftDerivative.ml.jinja  constants.ml.jinja  continuousDriftDerivative.ml.jinja  genericToken.ml.jinja  indexCfmm.ml.jinja  indexGetOracleEntrypoint.ml.jinja  indexTargetCalculation.ml.jinja  tokenCfmm.ml.jinja  tokenGetOracleEntrypoint.ml.jinja  tokenMetadata.ml.jinja  tokenTargetCalculation.ml.jinja
checker_tools/builder/test/: test_config.py
checker_tools/client/: checker.py  cli.py  operations.py
client/: checker.py  cli.py  deploy-all.py  lib.py  main.py  pyproject.toml  shell.nix
client/checker_client/: bigmap.py  checker.py  cli.py  operations.py
client/checker_client/.ipynb_checkpoints/: cli-checkpoint.py
docs/: avl_diagram.drawio  burrow-state-liquidations.md  cfmm.md  glossary.md  liquidation-auction.md  oracle_callbacks.drawio  prices.md  security-concerns.md  system-parameters.md  testing.md  uniswap.md
docs/spec/: Makefile  burrow-state-liquidations.rst  cfmm.rst  conf.py  deploying.rst  design.rst  functional_spec.rst  glossary.rst  index.rst  introduction.rst  liquidation-auction.rst  operational.rst  requirements.txt  system-diagram.drawio  system-parameters.rst
e2e/: main.py  plot-gas-profiles.py  pyproject.toml
ligo/: Makefile  avl.mligo  call.sh  checker.mligo  deploy.sh  shell.nix  tr-avl.sh
ligo/bench/: Makefile  README.md  entrypoint.mligo
monolithic/: .gitignore  Makefile  address.ml  address.mli  auction.ml  auction.mli  avl.ml  avlTests.ml  bigMap.ml  burrow.ml  checker.ml  common.ml  constants.ml  dune  duration.ml  error.ml  fixedPoint.ml  fixedPoint.mli  fixedpoint.mli  huxian.ml  kit.ml  kit.mli  liquidation.ml  parameters.ml  ptr.ml  script.ml  script.py  testAuction.ml  testAvl.ml  testChecker.ml  testFixedPoint.ml  testKit.ml  testLiquidation.ml  testParameters.ml  testTez.ml  testUniswap.ml  tests.ml  tez.ml  tez.mli  ticket.ml  (+4 more)
monolithic/docs/: burrow-state-liquidations.md
monolithic/tree_experiment/: forest_deque.ml
nix/: Dockerfile  entrypoint.sh  python.nix  sources.json
patches/: e2e-tests-hack.patch  ligo_michelson_maximum_type_size.patch  max_operation_data_length.patch  michelson_maximum_type_size.patch
py/: lib.py  main.py  pyproject.toml  shell.nix
scripts/: artifacts.py  call-contract.sh  comment-prs.py  compile-lazyfuns.sh  compile-ligo.rb  compile-ligo.sh  coverage-to-json.py  coverage-to-json.sh  deploy-contract.rb  deploy-contract.sh  deploy-master.sh  ensure-unique-errors.sh  format-ocaml.sh  format-python.sh  format.sh  generate-endpoints  generate-entrypoints  generate-entrypoints.rb  generate-ligo.sh  mutate.py  run-sandbox.sh  setup-keys.sh
scripts/builder/: README.md  pyproject.toml
scripts/builder/checker_builder/: cli.py  config.py
scripts/builder/checker_builder/templates/: bangBangDriftDerivative.ml.jinja  burrowOrigination.ml.jinja  constants.ml.jinja  continuousDriftDerivative.ml.jinja  fa2Price.ml.jinja  genericToken.ml.jinja  indexGetOracleEntrypoint.ml.jinja  indexOraclePriceType.ml.jinja  indexTargetCalculation.ml.jinja  tezPrice.ml.jinja  tok.ml.jinja  tokenGetOracleEntrypoint.ml.jinja  tokenOraclePriceType.ml.jinja  tokenTargetCalculation.ml.jinja
scripts/builder/checker_builder/test/: test_config.py
scripts/docker/: entrypoint-dev-container.sh
src/: .burrow.ml.kak.Y3SjHC  .gitignore  Makefile  address.ml  address.mli  auction.ml  avl.ml  bid.ml  bigMap.ml  burrow.ml  burrow.mli  burrowOrigination.ml  burrowOrigination.mli  burrowTypes.ml  call.ml  cfmm.ml  cfmm.mli  cfmmTypes.ml  checker.ml  checker.mli  checkerEndpoints.ml  checkerLazy.ml  checkerMain.ml  checkerTypes.ml  common.ml  common.mli  constants.ml  continuousDriftDerivative.ml  ctez.ml  ctez.mli  ctok.ml  ctok.mli  delegationAuction.ml  delegationAuction.mli  delegationAuctionTypes.ml  doublyLinkedLists.ml  driftDerivative.ml  driftDerivative.mli  dune  error.ml  (+82 more)
tests/: README.md  dune  ensure-unique-errors.sh  ratio.ml  testArbitrary.ml  testAvl.ml  testAvlModel.ml  testBurrow.ml  testCfmm.ml  testChecker.ml  testCheckerEntrypoints.ml  testCheckerLazyEntrypoints.ml  testCheckerMain.ml  testCommon.ml  testConstants.ml  testContinuousDriftDerivative.ml  testCtez.ml  testCtok.ml  testDelegationAuction.ml  testFa2.ml  testFa2Interface.ml  testFixedPoint.ml  testKit.ml  testLib.ml  testLiquidation.ml  testLiquidationAuction.ml  testLqt.ml  testMem.ml  testMockFA2.ml  testParameters.ml  testPtr.ml  testRatio.ml  testSliceList.ml  testTez.ml  testTok.ml  testUniswap.ml  testWctez.ml  testWtez.ml  tests.ml
tests/test_lib/: dune  testCommon.ml
tests/test_suite_long/: dune  testAvlModel.ml  tests.ml
tests/test_suite_main/: dune  testAvl.ml  testBurrow.ml  testCfmm.ml  testChecker.ml  testFixedPoint.ml  testLiquidation.ml  testLiquidationAuction.ml  testParameters.ml  tests.ml
util/: README.md  mock_cfmm_oracle.mligo  mock_cfmm_oracle.tz  mock_oracle.mligo  mock_oracle.tz
