[tool.poetry]
name = "checker"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "^3.8"
checker-client = { develop=true, path = "./client" }
checker-e2e = { develop=true, path = "./e2e" }
checker-builder = { develop=true, path = "./scripts/builder" }

tqdm = "*"
matplotlib = "=3.3.4"

[tool.poetry.dev-dependencies]
black = "^21.5b1"
isort = "^5.8.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
