[tool.poetry]
name = "checker-e2e"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.8"
checker-client = { path = "../client" }
docker = "^5.0.0"
portpicker = "^1.3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
