[tool.poetry]
name = "checker-e2e"
version = "0.1.0"
description = ""
authors = []
packages = [
  { include = "main.py" }
]

[tool.poetry.dependencies]
python = "^3.8"

checker-client = { path = "../client" }
checker-builder = "*"

click = "^7.1.2"
docker = "^4.4.4"
portpicker = "^1.3.9"
matplotlib = "=3.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
