;; The "preprocess" directive must be the same in every clause,
;; otherwise there will be warnings printed about an inaccurate
;; .merlin file being generated.

(library
 (name huxian)
 (modules Checker Constants Timestamp BigMap Avl Kit Tez FixedPoint
   Parameters Burrow Uniswap Error Address Auction Ticket)
 (libraries str zarith)
 (wrapped false)
 (preprocess
  (pps ppx_deriving.std)))

(test
 (name tests)
 (modules Tests TestAvl TestFixedPoint TestTez TestParameters TestLiquidation
   TestUniswap TestAuction)
 (libraries huxian ounit2 qcheck)
 (preprocess
  (pps ppx_deriving.std)))
