;; The "preprocess" directive must be the same in every clause,
;; otherwise there will be warnings printed about an inaccurate
;; .merlin file being generated.

;; ;; If one wishes to deactivate unused variable warnings (code 27) entirely
;; (env
;;  (dev
;;   (flags (:standard -w -27))))

;; If one wishes to make warnings non-fatal

(env
 (dev
  (flags
   (:standard -warn-error -A -w -53))))

(library
 (name huxian)
 (public_name src)
 (modules
  Checker
  CheckerEntrypoints
  CheckerTypes
  Constants
  CheckerMain
  Mem
  Avl
  Ctez
  Kit
  FixedPoint
  Parameters
  Burrow
  Cfmm
  CfmmTypes
  LiquidationAuction
  LiquidationAuctionTypes
  LiquidationAuctionPrimitiveTypes
  Ptr
  Ratio
  BurrowTypes
  Ligo
  LigoOp
  Fa12Types
  Fa2Interface
  Error
  Common)
 (libraries str zarith)
 (wrapped false)
 (instrumentation
  (backend bisect_ppx))
 (preprocess
  (pps ppx_deriving.std)))
