;; The "preprocess" directive must be the same in every clause,
;; otherwise there will be warnings printed about an inaccurate
;; .merlin file being generated.

;; ;; If one wishes to deactivate unused variable warnings (code 27) entirely
;; (env
;;  (dev
;;   (flags (:standard -w -27))))

;; If one wishes to make warnings non-fatal

(env
 (dev
  (flags
   (:standard -warn-error -A -w -53))))

(library
 (name checker)
 (public_name checker) ;; This must be present for `dune build @install` to work, and in turn it requires the presence of checker.opam.
 (libraries str zarith)
 (wrapped false)
 (instrumentation
  (backend bisect_ppx))
 (preprocess
  (pps ppx_deriving.std)))
