(test
 (name tests)
 (modules
  Tests
  TestAvl
  TestAvlModel
  TestBurrow
  TestCommon
  TestCtez
  TestFixedPoint
  TestRatio
  TestTez
  TestKit
  TestLqt
  TestMem
  TestParameters
  TestLiquidation
  TestCfmm
  TestLiquidationAuction
  TestChecker
  TestCheckerMain
  TestCheckerEntrypoints
  TestSliceList
  TestArbitrary
  TestFa2Interface
  TestLib)
 (libraries src core_kernel ounit2 qcheck) ;; gotta reference the public_name here.
 (preprocess
  (pps ppx_deriving.std)))
