(tests
 (names
   ;; FAST
   testBurrow
   testCommon
   testCtez
   testFixedPoint
   testRatio
   testTez
   testKit
   testLqt
   testMem
   testParameters
   testLiquidation
   testCfmm
   testChecker
   testCheckerMain
   testCheckerEntrypoints
   testFa2Interface

   ;; SLOW
   testAvl
   testAvlModel
   testLiquidationAuction
   testSliceList
 )
 (libraries checker core_kernel ounit2 qcheck)
 (preprocess
  (pps ppx_deriving.std)))
