(test
 (name tests)
 (modules
  Tests
  TestAvl
  TestBurrow
  TestFixedPoint
  TestTez
  TestKit
  TestParameters
  TestLiquidation
  TestCfmm
  TestLiquidationAuction
  TestChecker)
 (libraries src test_lib ounit2 qcheck) ;; gotta reference the public_name here.
 (preprocess
  (pps ppx_deriving.std)))
